# crypto-news-analyzer

./: .gitignore  README.md  main.py  pyproject.toml
ai/: SentimentAnalyzer.py
config/: config.py
data/: coindesk.json  cointelegraph.json  cryptoslate.json
database/: crypto_news.db  operations.py
docs/: diagrams.md
fetchers/: context_extractor.py  rss_fetcher.py
utils/: ai_processor.py  fetch_and_save.py
web/: api_server.py  run_server.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
